--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # clean code
-black
-corner
-flake8
-flake8-bugbear
-isort
-pre-commit
-pycodestyle
+#black
+#corner
+#flake8
+#flake8-bugbear
+#isort
+#pre-commit
+#pycodestyle
 
 #plotting
 matplotlib
