--- a/bilby_pipe_sub/injection_pe.ini
+++ b/bilby_pipe_sub/injection_pe.ini
@@ -16,6 +16,8 @@ prior-file = imbh_injection_generation.prior
 injection = True
 injection-file = outdir_imbh_injection/imbh_injection_injection_file.json
 
+gaussian-noise = True
+
 waveform-approximant = IMRPhenomPv2
 distance-marginalization = True
 phase-marginalization = False
