--- a/bilby_pipe_sub/outdir_imbh_injection/imbh_injection_config_complete.ini
+++ b/bilby_pipe_sub/outdir_imbh_injection/imbh_injection_config_complete.ini
@@ -1,5 +1,5 @@
 ini=injection_pe.ini
-verbose=False
+verbose=True
 calibration_model=None
 spline_calibration_envelope_dict=None
 spline_calibration_nodes=5
@@ -8,7 +8,7 @@ spline_calibration_phase_uncertainty_dict=None
 gps_file=None
 gracedb=None
 trigger_time=None
-gaussian_noise=False
+gaussian_noise=True
 data_dict=None
 data_format=None
 channel_dict=None
