change out path for injection_pe

--- a/bilby_pipe_sub/injection_pe.ini
+++ b/bilby_pipe_sub/injection_pe.ini
@@ -4,15 +4,15 @@ webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
 email = avi.vajpeyi@gmail.com
 
 
-label = imbh_injection
-outdir=outdir_imbh_injection
+label = imbh_injection_pe
+outdir=outdir_imbh_injection_pe
 
 detectors = [H1, L1]
 duration = 4
 
 sampler = dynesty
 
-prior-file = imbh_injection_generation.prior
+prior-file = imbh_pe.prior
 injection = True
 injection-file = outdir_imbh_injection/imbh_injection_injection_file.json
 
