--- a/bilby_pipe_sub/outdir_imbh_injection_pe/imbh_injection_pe_config_complete.ini
+++ b/bilby_pipe_sub/outdir_imbh_injection_pe/imbh_injection_pe_config_complete.ini
@@ -14,12 +14,12 @@ data_format=None
 channel_dict=None
 coherence_test=False
 detectors=['H1', 'L1']
-duration=4.0
+duration=6.0
 generation_seed=None
 psd_dict=None
 psd_fractional_overlap=0.5
 post_trigger_duration=2
-sampling_frequency=4096
+sampling_frequency=2048.0
 psd_length=32
 psd_method=median
 psd_start_time=None
@@ -64,7 +64,7 @@ postprocessing_arguments=None
 sampler=['dynesty']
 sampling_seed=None
 n_parallel=1
-sampler_kwargs=None
+sampler_kwargs={nlive: 1024}
 reference_frequency=20
 waveform_approximant=IMRPhenomPv2
 frequency_domain_source_model=lal_binary_black_hole
