--- a/bilby_pipe_sub/injection_pe.ini
+++ b/bilby_pipe_sub/injection_pe.ini
@@ -1,30 +1,41 @@
 accounting = ligo.dev.o3.cbc.pe.lalinference
 
-webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
-email = avi.vajpeyi@gmail.com
-
-
+# Job dirs
 label = imbh_injection_pe
 outdir=outdir_imbh_injection_pe
+webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
 
+# Detector arguments
 detectors = [H1, L1]
-duration = 4
+duration = 6
+sampling-frequency = 2048
 
-sampler = dynesty
-
+# Prior arguments
 prior-file = imbh_pe.prior
+
+# Injection param
 injection = True
 injection-file = outdir_imbh_injection/imbh_injection_injection_file.json
 
+# Data generation param
 gaussian-noise = True
 
+# Likelihood calculation
 waveform-approximant = IMRPhenomPv2
 distance-marginalization = True
 phase-marginalization = False
 time-marginalization = True
 
+# Sampling param
+sampler = dynesty
+sampler-kwargs = {nlive: 1024}
 
+# Job plotting
 create-plots = True
 create-summary = True
+webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
 
+# Job submission + notification
+email = avi.vajpeyi@gmail.com
 submit = True
+verbose = True
