--- a/bilby_pipe_sub/injection_pe.ini
+++ b/bilby_pipe_sub/injection_pe.ini
@@ -16,9 +16,11 @@ prior-file = imbh_pe.prior
 # Injection param
 injection = True
 injection-file = outdir_imbh_injection/imbh_injection_injection_file.json
+n-injection = 200
 
 # Data generation param
 gaussian-noise = True
+generation-seed = 5432
 
 # Likelihood calculation
 waveform-approximant = IMRPhenomPv2
