--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+h5py
+tables==3.4.4
+numpy==1.15.4
+astropy==2.0.9
+pluggy==0.9.0
+
 argparse
-astropy
 bilby
+bilby-pipe
 deepdish
 gwpy
 hurry.filesize
 lalsuite
 matplotlib
-numpy
 opencv-python-headless
 pandas
 plotly
