--- a/bilby_pipe_sub/injection_pe.ini
+++ b/bilby_pipe_sub/injection_pe.ini
@@ -2,7 +2,7 @@ accounting = ligo.dev.o3.cbc.pe.lalinference
 
 # Job dirs
 label = imbh_injection_pe
-outdir=outdir_imbh_injection_pe
+outdir = outdir_imbh_injection_pe
 webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
 
 # Detector arguments
@@ -35,7 +35,6 @@ sampler-kwargs = {nlive: 1024}
 # Job plotting
 create-plots = True
 #create-summary = True
-webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
 
 # Job submission + notification
 email = avi.vajpeyi@gmail.com
