uniform prior hyperpe

--- a/bilby_pipe_sub/injection_pe.ini
+++ b/bilby_pipe_sub/injection_pe.ini
@@ -11,7 +11,7 @@ duration = 4
 sampling-frequency = 2048
 
 # Prior arguments
-prior-file = imbh_pe.prior
+prior-file = prior_files/pe_prior_files/imbh_pe.prior
 
 # Injection param
 injection = True
