--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Virtual env
 venv/
+venv_bbmaster/
 
 # Compiled python
 *.pyc
@@ -32,7 +33,8 @@ htmlcov/
 *.pickle
 *.old
 
-
 # result files
 bilby_pipe_sub/outdir_imbh_injection_pe/*
 bilby_pipe_sub/outdir_imbh_injection/*
+
+imbh/tests/pe_test/*
