--- a/bilby_pipe_sub/injection_pe.ini
+++ b/bilby_pipe_sub/injection_pe.ini
@@ -10,6 +10,9 @@ detectors = [H1, L1]
 duration = 4
 sampling-frequency = 2048
 
+# H1, L1, H1L1 Analysis
+coherence-test = True
+
 # Prior arguments
 prior-file = prior_files/pe_prior_files/imbh_pe.prior
 
