added glitch analysis folder

--- a/bilby_pipe_sub/create_injection.ini
+++ b/bilby_pipe_sub/create_injection.ini
@@ -4,7 +4,7 @@ webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
 email = avi.vajpeyi@gmail.com
 
 label = imbh_injection
-outdir=outdir_imbh_injection_pe
+outdir = outdir_imbh_injection_pe
 
 detectors = [H1, L1]
 duration = 4
