added glitch analysis folder

--- a/glitch_analysis/create_injection.ini
+++ b/glitch_analysis/create_injection.ini
@@ -9,8 +9,7 @@ outdir=outdir_glitch_pe
 detectors = [H1, L1]
 duration = 4
 
-# to make injection file for H1 and L1
-incoherent_injections = True
+incoherent_injections
 
 sampler = dynesty
 
