added glitch analysis folder

--- a/glitch_analysis/create_injection.ini
+++ b/glitch_analysis/create_injection.ini
@@ -9,7 +9,6 @@ outdir=outdir_glitch_pe
 detectors = [H1, L1]
 duration = 4
 
-incoherent_injections
 
 sampler = dynesty
 
@@ -23,4 +22,7 @@ gaussian-noise = True
 create-plots = True
 
 submit = True
+
+
+incoherent_injections = True
 
