--- a/testing/glitch_pe.ini
+++ b/testing/glitch_pe.ini
@@ -2,7 +2,7 @@ accounting = ligo.dev.o3.cbc.pe.lalinference
 
 # Job dirs
 label = glitch_pe
-outdir = outdir_glitch_pe
+outdir = outdir_test
 webdir = /home/avi.vajpeyi/public_html/bilby_pipe_imbh_results
 
 # Detector arguments
@@ -18,7 +18,7 @@ prior-file = prior_files/pe_prior_files/imbh_pe.prior
 
 # Injection param
 injection = True
-injection-file = [outdir_glitch_pe/H1_glitch_injection_file.json,  outdir_glitch_pe/L1_glitch_injection_file.json]
+injection-file = [outdir_test/H1_glitch_injection_file.json,  outdir_test/L1_glitch_injection_file.json]
 n-injection = 2
 
 # Data generation param
