--- a/glitch_analysis/glitch_pe.ini
+++ b/glitch_analysis/glitch_pe.ini
@@ -13,7 +13,7 @@ sampling-frequency = 2048
 # H1, L1, H1L1 Analysis
 coherence-test = True
 
-# Prior arguments
+# Prior argument
 prior-file = prior_files/pe_prior_files/imbh_pe.prior
 
 # Injection param
