git ignore add file

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,10 @@ htmlcov/
 *.pickle
 *.old
 
+
 # result files
+**.submit
 bilby_pipe_sub/outdir_imbh_injection_pe/*
 bilby_pipe_sub/outdir_imbh_injection/*
-
+**/outdir*
 imbh/tests/pe_test/*
